fdo#76122: File Corruption-doc contains nested alternateContents.

Problem Description:
- After roundtrip, files contains <mc:AlternateContent>
  in <mc:Choice>.
- Due to this document gets corrupted when we open it in MS Office 2010.
- Added unit test.

Change-Id: Ic64b815eda4a42cd59f522ac4570ae145b0b38e1
Reviewed-on: https://gerrit.libreoffice.org/8575
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>